--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,5 @@
   <body>
     <div id="app"></div>
   </body>
-  <script src="./index.ts" type="module"></script>
+  <script src="index.ts" type="module"></script>
 </html>
